# rag-application

./: .env  .flaskenv  .gitignore  README.md  app.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  streamlit.py  test.json
app/: __init__.py  config.py  task_queue.py  test.ipynb  test.py  worker.py
app/database/: __init__.py  types.py
app/extensions/: redis_client.py
app/models/: __init__.py  conversations.py  document_chunks.py  document_collection.py  documents.py  messages.py
app/routes/: __init__.py  conversation.py  document.py  document_collection.py  message.py
app/schema/: __init__.py  conversation.py  document.py  document_chunk.py  document_collection.py  message.py
app/services/Chain/: document_chain.py  qanda_chain.py  retrieval_chain.py
app/services/Conversation/: summarization.py
migrations/versions/: 444f42395f66_describe_your_change.py  4982d55c949d_add_md_location_to_document_table.py  9b8869a5826b_add_title_column_in_conversation_table.py
models/: __init__.py  message.py
resources/message/: message.py
schema/: message.py
services/LLM/: __init__.py
services/Prompt/: __init__.py
slgs/: .dockerignore  Dockerfile  confluence_doc_formatter.py  confluence_pdf_docx.py  from_continuous_deployment_with_jenkins_pipelines_to_mcp_and_llm_497953d962e7.cleaned.md  requirements.txt
streamlit/: chat.py  document.py
ui/: chat.py  document.py
ui/session_storage/: session.py
updatedlangchain/: 1-langchainintro.ipynb  2-modelingintegration.ipynb  3-tools.ipynb  4-messages.ipynb  5-structuredoutput.ipynb
(+19 files in other folders)
